src/objects/User.object
<CustomObject>
    <fields>
        <fullName>AccountLockFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>会計ロック</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountUnLockFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>会計ロック解除</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AsteriskExtension__c</fullName>
        <label>AsteriskExtension</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AsteriskPassword__c</fullName>
        <label>AsteriskPassword</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BeginTimeCalMethodType__c</fullName>
        <label>出勤時間端数処理</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>切り捨て</fullName>
                </value>
                <value>
                    <fullName>切り上げ</fullName>
                </value>
                <value>
                    <fullName>四捨五入</fullName>
                    <default>true</default>
                    <label>四捨五入</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BeginTimeUnit__c</fullName>
        <label>出勤時間単位</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1分</fullName>
                </value>
                <value>
                    <fullName>5分</fullName>
                    <default>true</default>
                    <label>5分</label>
                </value>
                <value>
                    <fullName>10分</fullName>
                </value>
                <value>
                    <fullName>15分</fullName>
                </value>
                <value>
                    <fullName>20分</fullName>
                </value>
                <value>
                    <fullName>30分</fullName>
                </value>
                <value>
                    <fullName>60分</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BookingFlexAppLayoutNo__c</fullName>
        <description>レイアウトNoを確認する方法
「ドキュメン→ Jinyaholdings→一画面の予約項目レイアウト定義情報	→タグ「LAYOUT」→タグ「LAYOUTCODE」</description>
        <inlineHelpText>一画面に切替できるイアウトNoを指定可能、複数レイアウトを利用したい場合、カンマで複数レイアウトNoを一括設定可能
例：レイアウトNo：01,02,03　→レイアウト01,02,03を一画面に選択、切替できる、デフォルトレイアウトNo：01
デフォルトレイアウトNoを指定したい場合、レイアウトNoの後ろに、「:1」を指定すると、デフォルトレイアウトNoを指定可能
例：複数レイアウト、レイアウトNo.02はデフォルトレイアウトの場合、下記様に定義可能
-&gt;01,02:1,03</inlineHelpText>
        <label>一画面のレイアウトNo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTIDNO__c</fullName>
        <inlineHelpText>CTIのダイヤルイン番号情報格納、CTIからこの番号へ発信する場合、CTI表示WINを表示する</inlineHelpText>
        <label>CTIDNO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalMethodType__c</fullName>
        <label>退勤端数処理</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>切り捨て</fullName>
                </value>
                <value>
                    <fullName>切り上げ</fullName>
                </value>
                <value>
                    <fullName>四捨五入</fullName>
                    <default>true</default>
                    <label>四捨五入</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DefaultShopCode__c</fullName>
        <label>デイフォル店舗コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <defaultValue>IF( 

( REGEX( $User.Display_Name__c  , &quot;[a-zA-Z0-9_+-]+&quot;)),&apos;true&apos;,&apos;false&apos; 
)</defaultValue>
        <label>Display Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_user_photo__c</fullName>
        <defaultValue>true</defaultValue>
        <description>User profile/chatter photo will display on Jinya discussion forum post feed</description>
        <label>Display user photo in Discussion forum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmployeeCode__c</fullName>
        <label>従業員番号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmploymentStatus__c</fullName>
        <label>雇用形態</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>社員</fullName>
                </value>
                <value>
                    <fullName>アルバイト</fullName>
                </value>
                <value>
                    <fullName>パート</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsAlarmPopup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to check if alarm popup is already opened in current user&apos;s browser</description>
        <label>IsAlarmPopup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNotCallCarInformation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>自動車ナンバー情報が入るとき、CTIウィンドウのポップアップ対象外する、しない制御
FALSE:ポップアップ対象（デフォルト値）
TRUE:ポップアップ対象外</inlineHelpText>
        <label>自動車ナンバーのポップアップ対象外</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNotCallPhoneInformation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>電話が入るとき、CTIウィンドウのポップアップ対象外する、しない制御
FALSE:ポップアップ対象（デフォルト値）
TRUE:ポップアップ対象外</inlineHelpText>
        <label>電話のポップアップ対象外</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNotNotifyIotInfomation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>IOT情報が来るとき、音声通知対象外する、しない制御 
FALSE:通知対象（デフォルト値） 
TRUE:通知対象外</inlineHelpText>
        <label>IOT音声通知対象外</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MemberType__c</fullName>
        <label>会員種別</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>G_MemberType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoEditCleanStatusFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>清掃ページに清掃ステータスを変更可／不可フラグ
TRUE:清掃ページに清掃ステータスを変更不可 
FALSE:清掃ページに清掃ステータスを変更可</inlineHelpText>
        <label>清掃編集不可</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutRestCalMethodType__c</fullName>
        <label>外出時間端数処理</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>切り捨て</fullName>
                </value>
                <value>
                    <fullName>切り上げ</fullName>
                </value>
                <value>
                    <fullName>四捨五入</fullName>
                    <default>true</default>
                    <label>四捨五入</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutRestTimeUnit__c</fullName>
        <label>外出時間単位</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1分</fullName>
                </value>
                <value>
                    <fullName>5分</fullName>
                    <default>true</default>
                    <label>5分</label>
                </value>
                <value>
                    <fullName>10分</fullName>
                </value>
                <value>
                    <fullName>15分</fullName>
                </value>
                <value>
                    <fullName>20分</fullName>
                </value>
                <value>
                    <fullName>30分</fullName>
                </value>
                <value>
                    <fullName>60分</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaidHolidays__c</fullName>
        <label>有給休暇</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReadOnlyLst__c</fullName>
        <label>機能読みモードリスト</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RestCalMethodType__c</fullName>
        <label>入室時間端数処理</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>切り捨て</fullName>
                </value>
                <value>
                    <fullName>切り上げ</fullName>
                </value>
                <value>
                    <fullName>四捨五入</fullName>
                    <default>true</default>
                    <label>四捨五入</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RestMinuteIsMinusFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>「勤怠作業時間が6時間以上でかつ休憩時間は０分ときは、無条件に休憩時間をマイナス1.0とする」対象するがどうか、チエックすると、対象外</inlineHelpText>
        <label>休憩時間マイナス対象外</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RestTimeUnit__c</fullName>
        <label>入室時間単位</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1分</fullName>
                </value>
                <value>
                    <fullName>5分</fullName>
                    <default>true</default>
                    <label>5分</label>
                </value>
                <value>
                    <fullName>10分</fullName>
                </value>
                <value>
                    <fullName>15分</fullName>
                </value>
                <value>
                    <fullName>20分</fullName>
                </value>
                <value>
                    <fullName>30分</fullName>
                </value>
                <value>
                    <fullName>60分</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShopCode__c</fullName>
        <description>従業員所属店舗の店舗コードを指定可能、複数店舗を兼務の場合、カンマで複数店舗コードを一括設定可能
例：複数店舗兼務：01,02,03　→店舗01,02,03兼務になる、デフォルト所属店舗：01
デフォルト所属店舗を指定したい場合、店舗コードの後ろに、「:1」を指定すると、デフォルト店舗を指定可能
例：複数店舗兼務、店舗02はデフォルト所属店舗の場合、下記様に定義可能
-&gt;01,02:1,03</description>
        <inlineHelpText>従業員所属店舗の店舗コードを指定可能、複数店舗を兼務の場合、カンマで複数店舗コードを一括設定可能
例：複数店舗兼務：01,02,03　→店舗01,02,03兼務になる、デフォルト所属店舗：01
デフォルト所属店舗を指定したい場合、店舗コードの後ろに、「:1」を指定すると、デフォルト店舗を指定可能
例：複数店舗兼務、店舗02はデフォルト所属店舗の場合、下記様に定義可能
-&gt;01,02:1,03</inlineHelpText>
        <label>店舗コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StaffScheduleAllEdit__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>全員のスタッフ情報を編集可・不可制御フラグ
全員のスタッフ情報を編集可：TRUE（デイフォル値）
全員のスタッフ情報を編集不可：FALSE、
　　FALSEの場合、ユーザのロール設定により、スタッフ編集制御を行う
　　ロール設定なしー▶全員編集可
　　ロール設定ありー▶本人と下位ユーザの情報を編集可</inlineHelpText>
        <label>スタッフのすべて変更</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StaffScheduleNoshow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>スタッフの表示対象外</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SyncShopLogo__c</fullName>
        <inlineHelpText>Jinyaconnectアプリケーションの店舗ロゴファイルのID/URL 情報を格納する</inlineHelpText>
        <label>SyncShopLogo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SyncShopName__c</fullName>
        <inlineHelpText>Jinyaconnectアプリケーションの店舗名情報を格納する</inlineHelpText>
        <label>SyncShopName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeUnit__c</fullName>
        <label>退勤時間単位</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1分</fullName>
                </value>
                <value>
                    <fullName>5分</fullName>
                    <default>true</default>
                    <label>5分</label>
                </value>
                <value>
                    <fullName>10分</fullName>
                </value>
                <value>
                    <fullName>15分</fullName>
                </value>
                <value>
                    <fullName>20分</fullName>
                </value>
                <value>
                    <fullName>30分</fullName>
                </value>
                <value>
                    <fullName>60分</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isCallInformationEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCallInformationEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>online_status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is for checking whether the user in conference or not</description>
        <label>online_status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>userPhotourl__c</fullName>
        <label>userPhotourl</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>